# scrapeycat

./: CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: checks_and_tests.yml  coverage_and_mdbook.yml  coverage_and_mdbook_dry_run.yml  mdbook.yml
book/: book.toml  commands-index.py  effects-index.py
book/src/: SUMMARY.md  advanced-usage-lua.md  commands-abortifempty.md  commands-append.md  commands-apply.md  commands-clear.md  commands-clearheaders.md  commands-delete.md  commands-discard.md  commands-drop.md  commands-effect.md  commands-extract.md  commands-first.md  commands-get.md  commands-header.md  commands-jsonpath.md  commands-load.md  commands-map.md  commands-prepend.md  commands-retain.md  commands-run.md  commands-store.md  commands.md  effects-notify.md  effects-print.md  effects.md  functions-var.md  getting-started-daemon.md  getting-started-install.md  getting-started-scripts.md  getting-started.md  introduction.md
examples/github-review-request/: github-review-request.scrape  scrapeycat-daemon.toml
examples/scripts/: etymonline.scrape  notify.scrape  temp-sthlm.scrape
scripts/: bbc.scrape  etymonline.scrape  notify.scrape  print.scrape  temp-sthlm.scrape  word-of-the-day.scrape  wotd-etymology.scrape
src/: effect.rs  lib.rs  main.rs  scraper.rs  testutils.rs
src/daemon/: config.rs  config_file.rs  cron.rs  mod.rs  suite.rs
src/scrapelang/: lexer.rs  luaprogram.rs  mod.rs  parser.rs  preprocessor.rs  program.rs
src/util/: boundedu8.rs  mod.rs
tests/: book.rs  scripts.rs  stress.rs
tests/assets/scripts/: bbc-science.expect  bbc-science.input  bbc-science.scrape  discard.expect  discard.scrape  explicit-args-override-results-as-implicit-args-for-effect.expect  explicit-args-override-results-as-implicit-args-for-effect.scrape  explicit-args-override-results-as-implicit-args-for-run-sub.scrape  explicit-args-override-results-as-implicit-args-for-run.expect  explicit-args-override-results-as-implicit-args-for-run.scrape  print.scrape  results-as-implicit-args-for-effect.scrape  results-as-implicit-args-for-run-sub.scrape  results-as-implicit-args-for-run.expect  results-as-implicit-args-for-run.scrape  retain.expect  retain.input  retain.scrape
(+8 files in other folders)
