[package]
name = "scrapeycat"
version = "0.1.0"
edition = "2021"

[features]
testutils = []

[lib]
name = "libscrapeycat"
path = "src/lib.rs"

[dependencies]
chrono = "0.4.39"
clap = { version = "4.5.32", features = ["derive"] }
dirs = "6.0.0"
flagset = "0.4.6"
im = "15.1.0"
jsonpath-rust = "1.0.2"
log = "0.4.26"
mlua = { version = "0.10.3", features = ["async", "lua52", "send", "vendored"] }
notify-rust = "4.11.4"
regex = "1.11.1"
reqwest = "0.12.12"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
stderrlog = "0.6.0"
thiserror = "2.0.10"
tokio = { version = "1.43.0", features = ["full"] }
toml = "0.8.20"
winnow = "0.6.24"

[dev-dependencies]
bolero = "0.12.0"
serde_json = "1.0.140"
