[package]
name = "scrapeycat"
version = "0.1.0"
edition = "2024"

[features]
testutils = []

[lib]
name = "libscrapeycat"
path = "src/lib.rs"

[dependencies]
chrono = "0.4.44"
clap = { version = "4.5.60", features = ["derive"] }
dirs = "6.0.0"
flagset = "0.4.7"
im = "15.1.0"
jsonpath-rust = "1.0.4"
log = "0.4.29"
mlua = { version = "0.11.6", features = ["async", "lua52", "send", "vendored"] }
notify-rust = "4.12.0"
regex = "1.12.3"
reqwest = "0.13.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
stderrlog = "0.6.0"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
toml = "1.0.6"
winnow = "0.7.15"

[dev-dependencies]
bolero = "0.13.4"
serde_json = "1.0.140"
